<?xml version="1.0" encoding="utf-8"?>
<!--
/*
* Copyright (C) 2008 The Android Open Source Project
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
*      http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*/
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- General -->
    <skip />
    <!-- Application name -->
    <string name="wallpapers">Nexus Live Wallpaper</string>

    <!-- Wallpapers: -->
    <skip />    
    
	<!-- Wallpaper showing nexus -->
    <string name="wallpaper_nexus">Nexus</string>
    <string name="wallpaper_nexus_author">Google</string>
    <string name="wallpaper_nexus_desc">
        A peek inside the neural network.
    </string>
    
    <string name="settings">Settings</string>
    <string name="title_colors">Colors</string>
    <string name="title_background">Background</string>
    <string name="title_about">About</string>
    
    <string name="description_colors">Colors used to render the particules</string>
	<string name="description_background">Wallpaper displayed in the background</string>
	<string name="description_about">Information about this software</string>
	
	<string name="key_colors">colors</string>
	<string name="key_background">background</string>
	<string name="key_about">about</string>
	
	<string name="color_name_blue">Blue</string>
	<string name="color_name_cyan">Cyan</string>
	<string name="color_name_green">Green</string>
	<string name="color_name_magenta">Magenta</string>
	<string name="color_name_orange">Orange</string>
	<string name="color_name_purple">Purple</string>
	<string name="color_name_red">Red</string>
	<string name="color_name_white">White</string>
	<string name="color_name_yellow">Yellow</string>
	
	<string name="color_hex_blue">#0000ff</string>
	<string name="color_hex_cyan">#00ffff</string>
	<string name="color_hex_green">#00ff00</string>
	<string name="color_hex_magenta">#ff00ff</string>
	<string name="color_hex_orange">#ff9933</string>
	<string name="color_hex_purple">#9933ff</string>
	<string name="color_hex_red">#ff0000</string>
	<string name="color_hex_white">#ffffff</string>
	<string name="color_hex_yellow">#ffff00</string>

    <string name="background_name_original">Original</string>
    <string name="background_name_alternative">Alternative</string>
    
    <string name="background_value_original">ORIGINAL</string>
    <string name="background_value_alternative">ALTERNATIVE</string>
    
    <string name="aosp_about">
        This application is based on the original Nexus live wallpaper source code from 
        the <a href="https://source.android.com/">Android Open Source Project</a>
        licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">apache 2.0 licence</a>
    </string>
    <string name="nexus_about">Nexus Legacy v1.0</string>
    <string name="xdevl_about">Copyright &#169; 2014 All rights reserved. xdevl</string>
    
</resources>
