<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    
    <MultiSelectListPreference
        android:key="@string/key_colors"
        android:title="@string/title_colors"
        android:summary="@string/description_colors"
        android:dialogTitle="@string/title_colors"
        android:entries="@array/color_labels"
        android:entryValues="@array/color_values" />
    
     <ListPreference
        android:key="@string/key_background"
        android:title="@string/title_background"
        android:summary="@string/description_background"
        android:dialogTitle="@string/title_background"
        android:entries="@array/background_labels"
        android:entryValues="@array/background_values" />
    
    <Preference
        android:key="@string/key_about"
        android:title="@string/title_about"
        android:summary="@string/description_about" />   
    
</PreferenceScreen>